--- a/dcl.css
+++ b/dcl.css
@@ -11,6 +11,9 @@ a {
 a:hover {
   text-decoration: none;
 }
+a:active {
+    color:white;
+}
 h1, h2 {
   font-family: 'Encode Sans Semi Condensed', sans-serif;
   font-weight: 400;
@@ -56,14 +59,17 @@ h2 {
 /* Header & Footer
 ------------------------------------*/
 header {
+    
   background: #143E4C;
   color: #8D99AE;
 }
 
 header h1,
 header h2 {
+
   color: #DB8D18;
-  margin: 0;
+  margin:  4px auto;
+  font-size: 35px;
 }
 
 header h2 {
@@ -89,11 +95,9 @@ header {
   height: 60px;
 }
 
-.profile-img {
-  width: 300px;
-  border-radius: 50%;
-  float: left;
-  margin-right: 30px;
+.vision-img {
+  width: 150px;
+  
 }
 
 /* Footer styles only */
@@ -105,32 +109,56 @@ footer {
 }
 
 footer {
-  background: white;
-  color: #3D9BE9;
+  background: #004647;
+  color: white;
 }
 
-footer .column-narrow {
+footer .content-wrap {
+    max-height: 200px;
+}
+
+.contact {
+  background: white;
+  color: #3D9BE9;   
+}
+
+.contact .content-wrap {
+    max-height: 500px;
+}
+.contact .column-narrow {
       color: #3D9BE9;
     font-size: 20px;
     text-align: left
 
 }
 
-footer .column-wide{
-    margin-top: 25px;
+.contact .column-wide{
+    margin-top: 20px;
+    margin-left: 30px;
 }
 
-.footer-text {
+.contact-text {
     width:100%;
     height: 30px;
     border: solid;
     border-color: #3D9BE9;
-    margin: 1px;
+    margin: 3px;
 }
 
-input[type=text]::-webkit-input-placeholder { /* Safari, Chrome(, Opera?) */
- color:#3D9BE9;
+.contact-textarea {
+    width:100%;
+    border: solid;
+    border-color: #3D9BE9;
+    margin: 3px;
 }
+
+
+::-webkit-input-placeholder { /* Safari, Chrome(, Opera?) */
+font-family: 'Roboto', sans-serif;
+ color:#3D9BE9;
+ font-size: 20px;    
+}
+
 input[type=search]:-moz-placeholder { /* Firefox 18- */
  color:#3D9BE9;
 }
@@ -141,15 +169,15 @@ input[type=search]:-ms-input-placeholder { /* IE (10+?) */
  color:#3D9BE9;
 }
 
-.footer-button {
+.contact-button {
     float: right;
     background:#3D9BE9 ;
     color: white;
     width: 80px;
     height: 35px;
      box-shadow: none;
-  border-radius: 0;
-    font-size: 20px;
+    border-radius: 0;
+    font-size: 15px;
     box-shadow: none;
     text-shadow: -1px 1px #417cb8;
   border: none;
@@ -176,7 +204,12 @@ input[type=search]:-ms-input-placeholder { /* IE (10+?) */
 /* Education
 ------------------------------------*/
 .education {
-    background: #8D99AE;
+    background: #008593;
+    color:white;
+}
+
+.education .column-narrow {
+    text-align: left;
 }
 
 .about{
@@ -186,4 +219,13 @@ input[type=search]:-ms-input-placeholder { /* IE (10+?) */
 
 .about h2 {
     margin: 0;
+}
+
+.about .column-narrow{
+    margin-top: 20px;
+}
+
+.about .column-wide{
+    margin-top: 15px;
+    margin-left: 40px;
 }
