--- a/dcl.css
+++ b/dcl.css
@@ -117,6 +117,9 @@ footer .content-wrap {
     max-height: 200px;
 }
 
+/* CONTACT
+------------------------------------*/
+
 .contact {
   background: white;
   color: #3D9BE9;   
@@ -126,9 +129,10 @@ footer .content-wrap {
     max-height: 500px;
 }
 .contact .column-narrow {
-      color: #3D9BE9;
+    color: #3D9BE9;
     font-size: 20px;
-    text-align: left
+    text-align: left;
+    font-weight: 100;
 
 }
 
@@ -137,6 +141,9 @@ footer .content-wrap {
     margin-left: 30px;
 }
 
+.contact p {
+    margin-bottom: 50px;
+}
 .contact-text {
     width:100%;
     height: 30px;
